# new-zip-dao

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  crawl-feasibility.md  data-layout.md  operations.md  sources.md
scripts/: setup_gdrive.sh  sync_to_gdrive.sh  zipdao-daily.sh
