[project]
name = "new-zip-dao"
version = "0.1.0"
description = "공공임대 공고 수집 모노레포 (크롤러 + 파이프라인)"
requires-python = ">=3.11"
dependencies = [
    "zipdao-core",
    "zipdao-crawlers",
    "zipdao-api",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
zipdao-core = { workspace = true }
zipdao-crawlers = { workspace = true }
zipdao-api = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages"]
