[project]
name = "new-zip-dao"
version = "0.1.0"
description = "공공임대 공고 수집 모노레포 (크롤러 + 파이프라인)"
requires-python = ">=3.11"
dependencies = [
    "zipdao-core",
    "zipdao-crawlers",
    "zipdao-api",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
zipdao-core = { workspace = true }
zipdao-crawlers = { workspace = true }
zipdao-api = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import 정렬, UP 최신 문법, B 버그 유발 패턴
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# 테스트 픽스처(HTML/JSON 원문)는 줄 길이 제한에서 제외
"packages/*/tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zipdao_core", "zipdao_crawlers", "zipdao_api"]
